--- a/homework<n>_shan_valleru.Rmd
+++ b/homework<n>_shan_valleru.Rmd
@@ -5,10 +5,32 @@ date: "2/10/2019"
 output: 
   html_document:
     self_contained: true
+    toc: true
+    toc_float: true
+editor_options: 
+  chunk_output_type: console
 ---
 
 My Github repository for my assignments can be found at this URL: [https://github.com/svalleru/compscix-415-2-assignments](https://github.com/svalleru/compscix-415-2-assignments)
 
 ```{r chunk_name, warning=FALSE, message=FALSE}
-# Question1
+library(tidyverse)
+```
+**bold**
+
+*italic*
+
+`code`
+
+# Heading 1
+1.question 1.1
+```{r eval=FALSE}
+```
+2.question 1.2
+```{r}
+```
+
+# Heading 2
+1.question 2.1
+```{r}
 ```
